<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user__book__set_book_time2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.tuay.service_transport.dtc.example.tuay.service_transport.User_Book.User_Book_SetBookTime2">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_above="@+id/UserConfirmIdenBtn"
        android:paddingTop="@dimen/activity_vertical_margin">
        <LinearLayout
            android:id="@+id/linearLayoutUsername14"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            android:background="@drawable/buttonshape_orange"
            android:weightSum="4">

            <TextView
                android:id="@+id/textView29"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:paddingLeft="10dp"
                android:layout_gravity="center_vertical"
                android:textColor="@color/WhiteSmoke"
                android:text="@string/User_periot_of_price" />



        </LinearLayout>
        <LinearLayout
            android:id="@+id/lay_user_periot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/linearLayoutUsername14">

            <Spinner
                android:id="@+id/sp_user_periot"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:layout_below="@+id/linearLayoutUsername14"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:entries="@array/periot_price"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutUsername15"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/lay_user_periot"
            android:orientation="horizontal"
            android:background="@drawable/buttonshape_orange"
            android:layout_marginTop="10dp"
            android:weightSum="4">

            <TextView
                android:id="@+id/textView30"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.8"
                android:textColor="@color/WhiteSmoke"
                android:text="@string/User_type_of_fuel" />



        </LinearLayout>
        <LinearLayout
            android:id="@+id/lay_user_Fuel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/linearLayoutUsername15">
            <Spinner
                android:id="@+id/sp_user_Fuel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_weight="1.8"
                android:entries="@array/VanFuel"/>
        </LinearLayout>




        <LinearLayout
            android:id="@+id/linearLayoutUsername16"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/lay_user_Fuel"
            android:background="@drawable/buttonshape_orange"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:weightSum="4">

            <TextView
                android:id="@+id/textView31"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:textColor="@color/WhiteSmoke"
                android:text="@string/User_van_option" />



        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayoutUsername17"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/linearLayoutUsername16"
            android:paddingLeft="20dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/cb_user_karaoke"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/Driver_Karaoke" />

            <CheckBox
                android:id="@+id/cb_user_fire_tech"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/Driver_Fire_Theque" />

            <CheckBox
                android:id="@+id/cb_user_sofa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/Driver_leather_sofa" />

            <CheckBox
                android:id="@+id/cb_user_wheelchair"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/Driver_Place_For_WheelChair" />


        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/UserConfirmIdenBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/button_cricle"
        android:src="@drawable/check_login_white"
        android:layout_below="@+id/UserRememberMyself"
        android:layout_marginTop="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>
