<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_history_menu_bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="vertical"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:background="@drawable/rounded_calender_item_gray"
            android:gravity="center_vertical"
            android:padding="@dimen/activity_horizontal_margin" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:drawableStart="@drawable/rounded_calender_item_gray"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/font_18"
            android:text="@string/txtColorGray" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:background="@drawable/rounded_calender_item_blue"
            android:gravity="center_vertical"
            android:padding="@dimen/activity_horizontal_margin" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:drawableStart="@drawable/rounded_calender_item"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/font_18"
            android:text="@string/txtColorBlue" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:background="@drawable/rounded_calender_item"
            android:gravity="center_vertical"
            android:padding="@dimen/activity_horizontal_margin" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:drawableStart="@drawable/rounded_calender_item"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/font_18"
            android:text="@string/txtColorGreen" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:background="@drawable/rounded_calender_item_red"
            android:gravity="center_vertical"
            android:padding="@dimen/activity_horizontal_margin" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:drawableStart="@drawable/rounded_calender_item_red"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/font_18"
            android:text="@string/txtColorRed" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:background="@drawable/rounded_calender_item_yellow"
            android:gravity="center_vertical"
            android:padding="@dimen/activity_horizontal_margin" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:drawableStart="@drawable/rounded_calender_item_yellow"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/font_18"
            android:text="@string/txtColorYellow" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:background="@drawable/rounded_calender_item_green_dask"
            android:gravity="center_vertical"
            android:padding="@dimen/activity_horizontal_margin" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:drawableStart="@drawable/rounded_calender_item_yellow"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/font_18"
            android:text="@string/txtColorSuccess" />

    </LinearLayout>

</LinearLayout>