<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <TextView
        android:id="@+id/txt_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtOr"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/font_18"
        android:layout_above="@+id/facebook_login"
        android:layout_centerHorizontal="true"
        android:visibility="visible"/>


    <!--<com.facebook.login.widget.LoginButton-->
        <!--android:id="@+id/login_button"-->
        <!--android:layout_below="@+id/txt_or"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:paddingTop="10dp"-->
        <!--android:paddingBottom="10dp"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:layout_marginBottom="20dp"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--android:layout_marginRight="10dp"/>-->

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/linearLayout32" />

<LinearLayout
    android:id="@+id/linearLayout32"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:paddingBottom="5dp"
    android:layout_alignParentBottom="true">

    <Button
        android:id="@+id/UserRegisterBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtRegister"
        android:layout_margin="5sp"
        android:textSize="@dimen/font_18"
        android:background="@drawable/buttonshape_orange"
        android:textColor="@color/WhiteSmoke" />

</LinearLayout>

<ImageView
    android:id="@+id/imageViewlogoUnder"
    android:layout_width="@dimen/image_size_logo_width"
    android:layout_height="@dimen/image_size_logo_height"
    android:background="@drawable/head_text"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true" />

<LinearLayout
    android:id="@+id/layoutStaff"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="5"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_below="@+id/imageViewlogoUnder"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true">

    <TextView
        android:id="@+id/txt_authen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_20"
        android:gravity="center"
        android:textStyle="bold"
        android:padding="5dp"
        android:textColor="@color/black_1"
        android:text="User"/>

</LinearLayout>

<LinearLayout
    android:id="@+id/linearLayoutUsername"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="5"
    android:layout_marginTop="10dp"
    android:layout_below="@+id/layoutStaff"
    android:gravity="center_vertical"
    android:padding="@dimen/padding_login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@drawable/ic_user_name_ico"
        android:layout_weight="0.5"/>

    <EditText
        android:id="@+id/UserUsernameEdt"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:ems="10"
        android:hint="@string/hintLogin"
        android:textSize="@dimen/font_20"
        android:inputType="textPersonName"
        android:layout_marginLeft="10dp"
        android:textColorHint="@color/DarkGray"
        android:layout_weight="4.5" />

</LinearLayout>

<CheckBox
    android:id="@+id/UserRememberMyself"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:checked="false"
    android:text="@string/txtRemember"
    android:textSize="@dimen/font_18"
    android:textColor="@color/black_1"
    android:layout_marginTop="@dimen/padding_login"
    android:layout_marginLeft="@dimen/margin_left"
    android:layout_marginStart="@dimen/margin_left"
    android:layout_below="@+id/linearLayoutPass"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true" />

<ImageButton
    android:id="@+id/UserLoginBtn"
    android:layout_width="@dimen/margin_60"
    android:layout_height="@dimen/margin_60"
    android:background="@drawable/button_cricle"
    android:src="@drawable/check_login_white"
    android:layout_below="@+id/UserRememberMyself"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="@dimen/margin_10" />

<LinearLayout
    android:id="@+id/linearLayoutPass"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="5"
    android:padding="@dimen/padding_login"
    android:gravity="center_vertical"
    android:layout_marginTop="@dimen/margin_top_login"
    android:layout_below="@+id/linearLayoutUsername">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:background="@drawable/ic_password_ico"/>

    <EditText
        android:id="@+id/UserPasswordEdt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="8dp"
        android:hint="@string/hintPassword"
        android:textSize="@dimen/font_20"
        android:inputType="textPassword"
        android:layout_marginLeft="10dp"
        android:textColorHint="@color/DarkGray"
        android:layout_weight="4.5" />

</LinearLayout>

</RelativeLayout>

